# serializer version: 1
# name: test_async_get_config_entry_diagnostics[options0-Only URL and username]
  dict({
    'data': dict({
      'url': 'https://example.com',
      'username': '**REDACTED**',
    }),
    'options': dict({
    }),
  })
# ---
# name: test_async_get_config_entry_diagnostics[options0-Only URL]
  dict({
    'data': dict({
      'url': 'https://example.com',
    }),
    'options': dict({
    }),
  })
# ---
# name: test_async_get_config_entry_diagnostics[options0-URL and all auth params]
  dict({
    'data': dict({
      'api_key': '**REDACTED**',
      'password': '**REDACTED**',
      'url': 'https://example.com',
      'username': '**REDACTED**',
    }),
    'options': dict({
    }),
  })
# ---
